--- a/profapp/templates/_ruslan/partials/_user_menu.html
+++ b/profapp/templates/_ruslan/partials/_user_menu.html
@@ -118,9 +118,7 @@
                         <li ng-show="user.id" role="presentation" class="menu-profile">
                             <a pr_test="UserProfile"  href="{{ url_user_profile({user_id:user.id}) }}" role="button" aria-haspopup="true"
                                aria-expanded="false">
-                                <img class="person-small-cover" pr-image="" pr-no-image="{{ user_avatar_url }}">
-                                {{user.name}}
-                            </a>
+                                <img class="person-small-cover" pr-image="" pr-no-image="{{ user_avatar_url }}">{{user.name}}</a>
                             <a pr_test="LogOut" class="login-profile" href="{{ url_auth_logout() }}">Log out</a>
                             <!--<ul class="dropdown-menu">
                                 <li ng-show="user.id"><a href="{{ url_user_profile({user_id:user.id}) }}">{{ _('Profile') }}</a></li>
