--- a/profapp/static/css/style.css
+++ b/profapp/static/css/style.css
@@ -726,7 +726,9 @@ body {
   margin-top: 12px;
 }
 .flash-message {
-  box-shadow: 3px 4px 7px rgba(0, 0, 0, 0.3);
+  transition: bottom 5s cubic-bezier(0.19, 1.61, 0.58, -0.5);
+  cursor: pointer;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
   z-index: 100;
   position: fixed;
   right: 0;
