--- a/profapp/templates/help.html
+++ b/profapp/templates/help.html
@@ -1,19 +1,25 @@
 {% extends "index_lazy_layout.html" %}
 
 {% block title %}Profireader - Articles list{% endblock title %}
+<script>
 
+</script>
 {% block portal_content %}
     <div class="link-page">
         <h5>{{ _('Help page') }}</h5>
     </div>
-    <form class="help-page">
-        <h3>{{ __('Надішліть нам повідомлення') }}<br>
-        <small>{{ __('Адміністратор сайту зв~яжеться з Вами') }}</small></h3>
-        <div class="form-for-message col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3">
+        <form class="help-page">
+            <h3>{{ __('Надішліть нам повідомлення') }}<br>
+                <small>{{ __('Адміністратор сайту зв~яжеться з Вами') }}</small>
+            </h3>
+            <div class="form-for-message col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3">
 
-            <input pr-test="EmailInput" type="email" class="form-control" placeholder="Email" value="{{ g.user.profireader_email }}">
-            <textarea pr-test="TextInput" class="form-control" rows="4" placeholder="Питання та побажання"></textarea>
-    <button pr-test="SendMessage" class="pull-right" type="submit">Надіслати </button>
-        </div>
-    </form>
+                <input pr-test="EmailInput" type="email" class="form-control" placeholder="Email"
+                       value="{{ g.user.profireader_email }}">
+                <textarea pr-test="TextInput" class="form-control" rows="4"
+                          placeholder="Питання та побажання"></textarea>
+                <button pr-test="SendMessage" class="pull-right" type="submit">Надіслати</button>
+            </div>
+        </form>
+
 {% endblock portal_content %}
