--- a/profapp/static/css/style.css
+++ b/profapp/static/css/style.css
@@ -27,13 +27,14 @@ body {
   color: #18BC9C;
 }
 .index-links {
-  background-color: #424242;
-  padding: 0px 35px 35px 35px;
+  background-color: #FFFFFF;
+  padding: 0px 35px 30px 35px;
   border-radius: 10px;
-  margin-right: 15px;
-  margin-left: 15px;
+  margin-right: -5px;
   min-height: 392px;
   margin-bottom: 100px;
+  box-shadow: 9px 21px 17px rgba(24, 188, 156, 0.72);
+  border: 1px solid;
 }
 .index-links a {
   padding: 5px 15px 5px 15px;
@@ -45,11 +46,9 @@ body {
   text-align: center;
 }
 .index-links i {
-  border-radius: 50px;
-  background-color: #424242;
-  padding: 15px;
-  color: #fff;
-  margin-top: -15px;
+  border-radius: 95px;
+  padding: 20px;
+  color: #18BC9C;
 }
 .index-links h3 {
   text-align: center;
@@ -59,7 +58,7 @@ body {
 }
 .index-links p {
   margin-top: 15px;
-  color: #FFFFFF;
+  color: #212121;
   font-weight: 200;
   font-size: 16px;
 }
@@ -903,7 +902,32 @@ body {
   color: #fff;
   padding: 5px 15px;
 }
+.mess-bg {
+  background-image: url('/static/images/develop-img.jpeg');
+  min-height: 100%;
+  min-width: 1024px;
+  width: 100%;
+  height: auto;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+.mess-bg .msg-message-user h3 {
+  text-align: center;
+  margin-top: 300px;
+  background-color: rgba(255, 0, 0, 0.47);
+  color: #fff;
+  padding: 10px;
+}
 /* ---MEDIA--- */
+@media screen and (max-width: 1024px) {
+  /* Specific to this particular image */
+  .mess-bg {
+    left: 50%;
+    margin-left: -512px;
+    /* 50% */
+  }
+}
 @media screen and (max-width: 764px) {
   .menu-site ul {
     float: right;
