--- a/profapp/templates/partials/Log in - Profireader.html
+++ b/profapp/templates/partials/Log in - Profireader.html
@@ -23,7 +23,7 @@
         <input class="submit-form" type="submit">
         <div class="logout-now">
             <p>{{ '{{' }}_('Forgot your password'){{ '}}' }}? <a pr-test="PassResetRequest" href="{{ url_for('auth.password_reset_request') }}">{{ '{{' }}_('Click here to Reset it'){{ '}}' }}</a>.</p>
-            <p>{{ '{{' }}_('New user'){{ '}}' }}? <a pr-test="ClickHereToReg" href="{{ url_for('auth.signup') }}">{{ '{{' }}_('Click here to register'){{ '}}' }}</a>.</p>
+{#           <p>{{ '{{' }}_('New user'){{ '}}' }}? <a pr-test="ClickHereToReg" href="{{ url_for('auth.signup') }}">{{ '{{' }}_('Click here to register'){{ '}}' }}</a>.</p>#}
         </div>
     </form>
 
