--- a/profapp/templates/general/user_edit_profile.html
+++ b/profapp/templates/general/user_edit_profile.html
@@ -11,13 +11,13 @@
             $scope.error = '{{ error }}';
             $scope.url_user_profile = {{ raw_url_for('user.profile')| safe }};
             $scope.save_user_profile = {{ raw_url_for('user.edit_profile')| safe }}
-            $scope.url_user_setings = {{ raw_url_for('user.profile')| safe}};
+                    $scope.url_user_setings = {{ raw_url_for('user.profile')| safe}};
             $scope.user = {{user.get_client_side_dict() | tojson | safe}};
             $scope.languages = {{ langs | safe}}
-            $scope.countries = {{ countries | safe}}
-            {#            $scope.update_url = {{ raw_url_for('user.avatar_update')|safe }};#}
+                    $scope.countries = {{ countries | safe}}
+                            {#            $scope.update_url = {{ raw_url_for('user.avatar_update')|safe }};#}
 
-            $scope.data = {};
+                            $scope.data = {};
 
 
             $scope.afterLoad = function (resp, deff) {
@@ -32,7 +32,7 @@
             };
 
 
-            $scope.save_user_changes =function(){
+            $scope.save_user_changes = function () {
                 console.log($scope.data)
             }
 
@@ -46,142 +46,119 @@
 
     {% raw %}
     <div ng-controller="edit_user" class="container">
-<div af af-amid-load="amidLoad" class="edit_user_profile" ng-model="data">
-<div class="row link-page">
+    <div af af-amid-load="amidLoad" class="edit_user_profile" ng-model="data">
+        <div class="row link-page">
             <h5 class="">{{ _('Edit profile') }}</h5>
             <a title="profile" href="{{ url_user_profile({'user_id':user.id}) }}"><i
                     class="fa fa-user fa-2x"></i></a>
-            <a title="setings" href="{{ url_user_profile({'user_id':user.id}) }}"><i class="fa fa-cog fa-2x"></i></a>
+            <a title="setings" href="{{ url_user_profile({'user_id':user.id}) }}"><i
+                    class="fa fa-cog fa-2x"></i></a>
         </div>
-    </div>
 
 
         <div class="row">
-            {#<img class="img-rounded profile-thumbnail" src="{{ user.gravatar(size=256) }}"><br>#}
+            <!-- <img class="img-rounded profile-thumbnail" src="{{ user.gravatar(size=256) }}"><br> -->
 
             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 profile-thumbnail"
                  style="background-image: url('{{ user.logo_file_url }}')">
                 <div class="control">
-                    <a ng-click="mySwitch = !mySwitch">
-                        <span ng-hide="mySwitch">[{{ '{{' }}_('upload picture'){{ '}}' }}]</span><span
-                            ng-show="mySwitch">[{{ '{{' }}_('hide'){{ '}}' }}]</span>
-                    </a>
-                    <form ng-hide="mySwitch" id="myform" method="post" style="display: inline;">
-                        <input type="hidden" name="avatar" value="Use Gravatar"/><a
-                            onclick="document.getElementById('myform').submit();" style="border: none;">[{{ '{{' }}_('use
-                        gravatar'){{ '}}' }}]</a>
-                    </form>
-                    <form id="avatar" ng-show="mySwitch" ng-init="mySwitch=false" action="{{ request.path }}"
-                          method="post"
-                          enctype="multipart/form-data">
-                        {{ '{{' }}_('Select image to upload'){{ '}}' }}:
-                        <input style="font-size: 12px;" type="file" name="avatar" id="fileToUpload" accept="image/*">
-                        <input type="submit" name="avatar" value="{{ '{{' }}_('Upload Image'){{ '}}' }}">
-                    </form>
+
                 </div>
+            </div>
 
 
-
-          <div class="row">
-                <!--<img class="img-rounded profile-thumbnail" src="{{ user.gravatar(size=256) }}"><br>-->
-
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 profile-thumbnail" pr-image="data.user.profireader_small_avatar_url">
-                    <div class="control">
-                        <a ng-click="mySwitch = !mySwitch">
-                            <span ng-hide="mySwitch">[{{ _('upload picture') }}]</span><span
-                                ng-show="mySwitch">[{{ _('hide') }}]</span>
-                        </a>
-                        <form ng-hide="mySwitch" id="myform" method="post" style="display: inline;">
-                            <input type="hidden" name="avatar" value="Use Gravatar"/><a
-                                onclick="document.getElementById('myform').submit();" style="border: none;">[{{ _('use
-                            gravatar') }}]</a>
-                        </form>
-                        <form id="avatar" ng-show="mySwitch" ng-init="mySwitch=false" action="{{ request.path }}"
-                              method="post"
-                              enctype="multipart/form-data">
-                            {{ _('Select image to upload') }}:
-                            <input style="font-size: 12px;" type="file" name="avatar" id="fileToUpload"
-                                   accept="image/*">
-                            <input type="submit" name="avatar" value="{{ _('Upload Image') }}">
-                        </form>
-                    </div>
+            <form class="col-lg-9 col-md-9 col-sm-9 col-xs-9 edit-grup">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
+                    <span class="input-group-addon" id="sizing-addon1">{{ _('Your display name') }}</span>
+                    <input class="form-control" aria-describedby="sizing-addon1" type="text" placeholder="name"
+                           ng-model="data.profireader_name"
+                           ng-value="user.profireader_name">
                 </div>
-
-                <!-- <a>
-                     <span ng-hide="mySwitch">[{{ _('use gravatar') }}]</span>
-                 </a>-->
-
-              <form class="col-lg-9 col-md-9 col-sm-9 col-xs-9 edit-grup">
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
-                        <span class="input-group-addon" id="sizing-addon1">{{ _('Your display name') }}</span>
-                        <input class="form-control" aria-describedby="sizing-addon1" type="text" placeholder="name" ng-model="data.profireader_name"
-                                ng-value="user.profireader_name">
-                    </div>
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
-                        <span class="input-group-addon" id="sizing-addon1">{{ _('Your email') }}</span>
-                        <input class="form-control" aria-describedby="sizing-addon1" type="text" disabled="disabled" placeholder="youremail@example.com" ng-model="data.profireader_email"
-                               name="name" ng-value="user.profireader_email">
-                    </div>
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
-                        <span class="input-group-addon" id="sizing-addon1">{{ _('Your first name') }}</span>
-                        <input class="form-control" aria-describedby="sizing-addon1" type="text"
-                               placeholder="first name" name="first_name" ng-value="user.profireader_first_name" ng-model="data.profireader_first_name">
-                    </div>
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
-                        <span class="input-group-addon" id="sizing-addon1">{{ _('Your last name') }}</span>
-                        <input class="form-control" aria-describedby="sizing-addon1" type="text" placeholder="last name"
-                               name="last_name" ng-value="user.profireader_last_name" ng-model="data.profireader_last_name">
-                    </div>
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
-                        <span class="input-group-addon" id="sizing-addon1">{{ _('Birthday') }}</span>
-                        <input class="form-control" pr-datepicker="" ng-model="data.birth_tm" aria-describedby="sizing-addon1" type="date"
-                               placeholder="birthday" name="birthday" ng-value="user.birth_tm" >
-                    </div>
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm">
-                        <span class="input-group-addon" id="sizing-addon1">{{ _('Gender') }}</span>
-                            <input type="radio" name="gender" id="male" value="male" ng-click="data.profireader_gender = 'male'" ng-checked="data.profireader_gender == 'male'">
-                            <label for="male">{{ _('Male') }}</label>
-                            <input type="radio" name="gender" id="female" value="female" ng-click="data.profireader_gender = 'female'" ng-checked="data.profireader_gender == 'female'">
-                            <label for="female">{{ _('Female') }}</label>
-                    </div>
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
-                        <span class="input-group-addon" id="sizing-addon1">{{ _('Language') }}</span>
-                        <select id="language" style="width: 150px" ng-options="option.name as option.display for option in languages" ng-model="data.lang"></select>
-                    </div>
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
-                        <span class="input-group-addon" id="sizing-addon1">{{ _('Your web-page') }}</span>
-                        <input class="form-control" aria-describedby="sizing-addon1" type="text"
-                               placeholder="www.your.webpage.com" name="link" ng-value="user.profireader_link" ng-model="data.profireader_link">
-                    </div>
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
-                        <span class="input-group-addon" id="sizing-addon1">{{ _('Your country') }}</span>
-                        <select id="country" style="width: 150px" ng-options="option for option in countries" ng-model="data.country"></select>
-                       <!-- країни дікт <select id="country" style="width: 150px" ng-options="country.value as _('__country ' + country.name) for country in countries" ng-model="data.country"></select> -->
-                    </div>
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
-                        <span class="input-group-addon" id="sizing-addon1">{{ _('Phone') }}</span>
-                        <input class="form-control" aria-describedby="sizing-addon1" type="text"
-                               placeholder="your phone" name="phone" ng-value="user.profireader_phone" ng-model="data.profireader_phone">
-                    </div>
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
-                        <span class="input-group-addon" id="sizing-addon1">{{ _('Location') }}</span>
-                        <input class="form-control" aria-describedby="sizing-addon1" type="text" placeholder="your city"
-                               name="location" ng-value="user.location" ng-model="data.location">
-                    </div>
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
-                        <span class="input-group-addon" id="sizing-addon1">{{ _('About me') }}</span>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
+                    <span class="input-group-addon" id="sizing-addon1">{{ _('Your email') }}</span>
+                    <input class="form-control" aria-describedby="sizing-addon1" type="text" disabled="disabled"
+                           placeholder="youremail@example.com" ng-model="data.profireader_email"
+                           name="name" ng-value="user.profireader_email">
+                </div>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
+                    <span class="input-group-addon" id="sizing-addon1">{{ _('Your first name') }}</span>
+                    <input class="form-control" aria-describedby="sizing-addon1" type="text"
+                           placeholder="first name" name="first_name" ng-value="user.profireader_first_name"
+                           ng-model="data.profireader_first_name">
+                </div>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
+                    <span class="input-group-addon" id="sizing-addon1">{{ _('Your last name') }}</span>
+                    <input class="form-control" aria-describedby="sizing-addon1" type="text"
+                           placeholder="last name"
+                           name="last_name" ng-value="user.profireader_last_name"
+                           ng-model="data.profireader_last_name">
+                </div>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
+                    <span class="input-group-addon" id="sizing-addon1">{{ _('Birthday') }}</span>
+                    <input class="form-control" pr-datepicker="" ng-model="data.birth_tm"
+                           aria-describedby="sizing-addon1" type="date"
+                           placeholder="birthday" name="birthday" ng-value="user.birth_tm">
+                </div>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm">
+                    <span class="input-group-addon" id="sizing-addon1">{{ _('Gender') }}</span>
+                    <input type="radio" name="gender" id="male" value="male"
+                           ng-click="data.profireader_gender = 'male'"
+                           ng-checked="data.profireader_gender == 'male'">
+                    <label for="male">{{ _('Male') }}</label>
+                    <input type="radio" name="gender" id="female" value="female"
+                           ng-click="data.profireader_gender = 'female'"
+                           ng-checked="data.profireader_gender == 'female'">
+                    <label for="female">{{ _('Female') }}</label>
+                </div>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
+                    <span class="input-group-addon" id="sizing-addon1">{{ _('Language') }}</span>
+                    <select id="language" style="width: 150px"
+                            ng-options="option.name as option.display for option in languages"
+                            ng-model="data.lang"></select>
+                </div>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
+                    <span class="input-group-addon" id="sizing-addon1">{{ _('Your web-page') }}</span>
+                    <input class="form-control" aria-describedby="sizing-addon1" type="text"
+                           placeholder="www.your.webpage.com" name="link" ng-value="user.profireader_link"
+                           ng-model="data.profireader_link">
+                </div>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
+                    <span class="input-group-addon" id="sizing-addon1">{{ _('Your country') }}</span>
+                    <select id="country" style="width: 150px" ng-options="option for option in countries"
+                            ng-model="data.country"></select>
+                    <!-- країни дікт <select id="country" style="width: 150px" ng-options="country.value as _('__country ' + country.name) for country in countries" ng-model="data.country"></select> -->
+                </div>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
+                    <span class="input-group-addon" id="sizing-addon1">{{ _('Phone') }}</span>
+                    <input class="form-control" aria-describedby="sizing-addon1" type="text"
+                           placeholder="your phone" name="phone" ng-value="user.profireader_phone"
+                           ng-model="data.profireader_phone">
+                </div>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
+                    <span class="input-group-addon" id="sizing-addon1">{{ _('Location') }}</span>
+                    <input class="form-control" aria-describedby="sizing-addon1" type="text"
+                           placeholder="your city"
+                           name="location" ng-value="user.location" ng-model="data.location">
+                </div>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
+                    <span class="input-group-addon" id="sizing-addon1">{{ _('About me') }}</span>
                         <textarea class="form-control" style="height: 100px;" aria-describedby="sizing-addon1"
                                   type="text" placeholder="Give us some information about you please" rows="8" cols="40"
                                   name="about_me" ng-value="user.about_me" ng-model="data.about_me"></textarea>
-                    </div>
-                    <div class="item"><button class="btn btn-default save-profile pull-right
+                </div>
+                <div class="item">
+                    <button class="btn btn-default save-profile pull-right
                         border-radius"
-                                type="button" ng-click="$af.save(data)"
-                                ng-disabled="!$af.isActionAllowed(data, 'save') ">Save profile</button></div>
-                </form>
-            </div>
+                            type="button" ng-click="$af.save(data)"
+                            ng-disabled="!$af.isActionAllowed(data, 'save') ">Save profile
+                    </button>
+                </div>
+            </form>
+
+
         </div>
-{% endraw %}
+    </div>
+    {% endraw %}
 {% endblock portal_content %}
 
 {% block scripts %}
