--- a/profapp/templates/_ruslan/partials/_user_menu.html
+++ b/profapp/templates/_ruslan/partials/_user_menu.html
@@ -103,21 +103,23 @@
 
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul>
-                        <li><a pr_test="ReadLine" href="{{ url_list_reader() }}" title="{{ _('Стрічка читача') }}"
+                        <li ng-if="user.id"><a pr_test="ReadLine" href="{{ url_list_reader() }}" title="{{ _('Стрічка
+                        читача')
+                         }}"
                                ng-class="{'selected': selected_user_menu == 'line_readers'}"><i
                                 class="fa fa-newspaper-o"></i></a></li>
-                        <li><a pr_test="UserMassages" href="{{ url_messenger }}" title="{{ _('Всі повідомлення') }}"
+                        <li ng-if="user.id"><a pr_test="UserMassages" href="{{ url_messenger }}" title="{{ _('Всі повідомлення') }}"
                                ng-class="{'selected': selected_user_menu == 'messages'}"><i
                                 class="fa fa-envelope-o"></i></a></li>
-                        <li><a pr_test="CompaniesList" href="{{ url_company_show() }}" title="{{ _('Компанії') }}"
+                        <li ng-if="user.id"><a pr_test="CompaniesList" href="{{ url_company_show() }}" title="{{ _('Компанії') }}"
                                ng-class="{'selected': selected_user_menu == 'companies_list'}"><i
                                 class="fa fa-building-o"></i></a></li>
-                        <li><a pr_test="FileManeger" href="{{ login_or_none_href() }}" ng-click="open_filemanager()" title="{{ _('Менеджер файлів') }}"
+                        <li ng-if="user.id"><a pr_test="FileManeger" href="{{ login_or_none_href() }}" ng-click="open_filemanager()" title="{{ _('Менеджер файлів') }}"
                                ng-class="{'selected': selected_user_menu == 'file_manager'}"><i
                                 class="fa fa-folder-open-o"></i></a></li>
                         <li><a pr_test="UserInfo" href="{{ url_general_help() }}" title="{{ _('Інформація') }}"
                                ng-class="{'selected': selected_user_menu == 'info'}"><i class="fa fa-info"></i></a></li>
-                        <li ng-show="user.id" role="presentation" class="menu-profile">
+                        <li ng-if="user.id" role="presentation" class="menu-profile">
                             <a pr_test="UserProfile"  href="{{ url_user_profile({user_id:user.id}) }}" role="button" aria-haspopup="true"
                                aria-expanded="false">
                                 <img class="person-small-cover" pr-image="" pr-no-image="{{ user_avatar_url }}">
@@ -132,7 +134,7 @@
                             </ul>-->
                         </li>
 
-                        <li ng-show="!user.id" role="presentation" class="menu-profile">
+                        <li ng-if="!user.id" role="presentation" class="menu-profile">
                             <a pr_test="LogIn" class="login-profile" href="{{ login_url }}?login_signup=login">Login</a>
                         </li>
                     </ul>
